<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/layout_modal"
    android:backgroundTint="#00FFFFFF"
    android:orientation="vertical">


    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/dialog_title"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#99252121" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/dialog_description"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHint="#99252121" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#A143C1"
        android:text="@string/dialog_button"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:cornerRadius="100dp" />
</LinearLayout>
