...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/create_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_button_red"
        android:backgroundTint="#F34236"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ImageButton
        android:id="@+id/timerButton"
        android:layout_width="40dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FFFFFF"
        android:tint="#F34236"
        app:layout_constraintBottom_toBottomOf="parent"
...
